--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,8 +90,7 @@ body {
 
 body {
   color: black;
-  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
-    rgb(var(--background-start-rgb));
+  background: white;
 }
 
 a {
