[UI][Maxell] fixed placeholder issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,3 +120,11 @@ a {
   justify-content: space-between;
 }
 
+input.footer-subscribe-input::-webkit-input-placeholder {
+  color: white;
+}
+
+input.landing-subscribe-input::-webkit-input-placeholder {
+  color: #2e2e2e;
+}
+
