[Feature][Maxell] added responsive search functionality

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,3 +128,7 @@ input.landing-subscribe-input::-webkit-input-placeholder {
   color: #2e2e2e;
 }
 
+.search-result-card {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
