[Feature][Maxell] added search results redirection

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,3 +132,7 @@ input.landing-subscribe-input::-webkit-input-placeholder {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.search-result-card:hover {
+  cursor: pointer;
+}
+
