[UI][Maxell] added upload blog page and input components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,7 +128,11 @@ input.landing-subscribe-input::-webkit-input-placeholder {
   color: #2e2e2e;
 }
 
-.search-result-card {
+.custom-box-shadow {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.custom-box-shadow-2 {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
